--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,7 @@
-annotated-types==0.7.0
-anyio==4.9.0
-arch==7.2.0
-astropy==7.0.1
-astropy-iers-data==0.2025.3.24.0.35.32
-certifi==2025.1.31
-clarabel==0.10.0
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-cvxpy==1.6.4
-cycler==0.12.1
-dnspython==2.7.0
-email_validator==2.2.0
-fastapi==0.115.5
-fastapi-cli==0.0.7
-fonttools==4.56.0
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-joblib==1.4.2
-kiwisolver==1.4.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-mdurl==0.1.2
-networkx==3.4.2
-numpy==2.2.4
-osqp==1.0.1
-packaging==24.2
-pandas==2.2.3
-patsy==1.0.1
-pillow==11.1.0
-pybind11==2.13.6
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyerfa==2.0.1.5
-Pygments==2.19.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-rich==13.9.4
-rich-toolkit==0.14.0
+fastapi[standard]==0.115.5
+uvicorn==0.32.1
+pydantic==2.10.2
 Riskfolio-Lib==7.0.0
-scikit-learn==1.6.1
-scipy==1.15.2
-scs==3.2.7.post2
-setuptools==78.1.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-starlette==0.41.3
-statsmodels==0.14.4
-threadpoolctl==3.6.0
-typer==0.15.2
-typing_extensions==4.13.0
-tzdata==2025.2
-uvicorn==0.34.0
-watchfiles==1.0.4
-websockets==15.0.1
-XlsxWriter==3.2.2
+numpy
+pandas
+scipy
