--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ fastapi[standard]==0.115.5
 uvicorn==0.32.1
 pydantic==2.10.2
 Riskfolio-Lib==7.0.0
-numpy
-pandas
-scipy
+numpy==1.25.2
+pandas==2.1.1
+scipy==1.11.4
